--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Pertemuan 3</title>
   </head>
   <body>
     <div class="card">
-      <img src="/assets/bebek.png" alt="gambarbebek" />
+      <img src="assets/bebek.png" alt="gambarbebek" />
       <div class="text">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia animi
